Update TODO and fix tabulation

--- a/TODO
+++ b/TODO
@@ -12,8 +12,8 @@ Table
 Folder explorer
 Theme explorer
 > 
-Code block
 Better paragraph determination
+Color palette (custom ?)
 
 DONE :
 LaTeX
@@ -21,3 +21,4 @@ Multiple size of title
 Bold
 Italic
 Title of the file
+Code block
